tests/ui/imports/unused-imports-in-test-module.stderr
error: unused import: `std::io::BufRead`
  --> $DIR/unused-imports-in-test-module.rs:3:5
   |
LL | use std::io::BufRead;
   |     ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-imports-in-test-module.rs:1:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:9:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:8:1
   |
LL | mod test {
   | ^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:19:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:18:1
   |
LL | mod tests {
   | ^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:29:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:28:1
   |
LL | mod test_a {
   | ^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:39:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:38:1
   |
LL | mod a_test {
   | ^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:49:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:48:1
   |
LL | mod tests_a {
   | ^^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:59:9
   |
LL |     use super::a;
   |         ^^^^^^^^
   |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
  --> $DIR/unused-imports-in-test-module.rs:58:1
   |
LL | mod a_tests {
   | ^^^^^^^^^^^

error: unused import: `super::a`
  --> $DIR/unused-imports-in-test-module.rs:69:9
   |
LL |     use super::a;
   |         ^^^^^^^^

error: aborting due to 8 previous errors

